plugins/chat/assets/stylesheets/common/chat-navbar.scss
.chat-navbar {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  width: 100%;

  &-container {
    padding-inline: 1rem;
    position: sticky;
    border-bottom: 1px solid var(--primary-low);
    background: var(--secondary);
    height: 50px;
    box-sizing: border-box;
    display: flex;
    z-index: z("header");
  }
}

.chat-navbar__right-actions {
  list-style: none;
  margin-left: auto;
}

